@@ -3,7 +3,7 @@ class UsersController < ApplicationController
   before_filter :get_filtered_tweets, :only => :index
 
   def index
-    @users = User.paginate :per_page => G140[:users_per_page], :page => params[:page], :conditions => "status = 1", :order => 'id DESC'
+    @users = User.paginate :per_page => G140[:users_per_page], :page => params[:page], :include => :categories, :conditions => "status = 1", :order => 'id DESC'
   end
 
   def deactivate
