@@ -6,7 +6,9 @@ Version 0.3.1
   Peco Danajlovski <vortexmk@gmail.com>
   * Refactoring: renamed lists to categories
 
-
+  Dalibor Nasevic <dalibor.nasevic@gmail.com>
+  * Fixed migration lists_to_categories
+  * Optimized select (n+1) when displaying users with categories (users/index page)
 
 Version 0.3
 ===========
